--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -153,7 +153,7 @@ tasks:
       - task: commit
       - npx semantic-release --dry-run
       - npx semantic-release --debug --no-ci
-      #- task: goreleaser
+      - task: goreleaser
       - task: build-ko
 
   goreleaser:
