--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -24,6 +24,15 @@ vars:
 
 dotenv: ['.env', '{{.HOME}}/.env']
 
+# PRECONDITION TO CHECK IF TOKENS SET OR UNSET FOR RELEASE
+release-preconditions: &release
+  - sh: "[[ -n \"${GITHUB_TOKEN}\" ]]"
+    msg: "Error: GITHUB_TOKEN is not set. Please set the environment variable and try again."
+  - sh: "[[ -z \"${GITLAB_TOKEN}\" ]]"
+    msg: "Error: GITLAB_TOKEN is set. Please unset the environment variable and try again."
+  - sh: "[[ $(git rev-parse --abbrev-ref HEAD) != 'main' ]]"
+    msg: "Error: You are on the 'main' branch. Please switch to a different branch and try again."
+
 tasks:
   check:
     desc: "Run pre-commit hooks"
@@ -106,7 +115,7 @@ tasks:
         if [[ -n $(git status --porcelain) ]]; then
           echo "committing changes"
           echo "ENTER COMMIT MESSAGE"
-          read COMMIT_MESSAGE;
+          COMMIT_MESSAGE=$(echo $(gum choose "feat: {{ .BRANCH }}" "fix: {{ .BRANCH }}" "BREAKING CHANGE: {{ .BRANCH }}"))
           git commit --allow-empty -a -m "$(echo ${COMMIT_MESSAGE})"
         else
           echo "no changes"
@@ -148,10 +157,15 @@ tasks:
 
   release:
     desc: Release
+    preconditions: *release
+    deps:
+      - run
     cmds:
       - task: commit
       - sleep 20s
-      - gh run watch --exit-status
+      - |
+        RUN_ID=$(gh run list | grep {{ .BRANCH }} | head -1 | awk '{for (i=1; i<=NF; i++) if ($i ~ /^[0-9]+$/) print $i}')
+        gh run watch ${RUN_ID} --exit-status
       - task: pr
       - npx semantic-release --dry-run
       - npx semantic-release --debug --no-ci
