--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ on:
 jobs:
   validate-golang:
     name: Valdiate Golang
-    uses: stuttgart-things/github-workflow-templates/.github/workflows/call-golang-validation.yaml@fmain #go-1.23.1
+    uses: stuttgart-things/github-workflow-templates/.github/workflows/call-golang-validation.yaml@main #go-1.23.1
     with:
       module-name: kaeffken
       environment-name: k8s
